--- a/auth-microservice/.sequelizerc
+++ b/auth-microservice/.sequelizerc
@@ -1,8 +1,7 @@
 const path = require('path');
 
 module.exports = {
-  config: path.resolve('config', 'config.js'),
-  'models-path': path.resolve('src', 'models'),
-  'seeders-path': path.resolve('src', 'seeders'),
-  'migrations-path': path.resolve('src', 'migrations'),
+  'config': path.resolve('dist', 'migration' ,  'config', 'config.js'),
+  'seeders-path': path.resolve('dist', 'migration' , 'seeders'),
+  'migrations-path': path.resolve('dist', 'migration' , 'migrations',),
 };
