--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -17,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "seed": "nest build  &&  npx sequelize-cli db:seed:all",
+    "migrate": " nest build &&   npx sequelize-cli db:migrate"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -25,18 +27,21 @@
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^6.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sequelize-cli": "^6.6.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/sequelize": "^11.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.19.9",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
@@ -45,20 +50,21 @@
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "install": "^0.13.0",
     "jest": "^29.5.0",
+    "npm": "^10.9.3",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "prettier": "^3.0.0",
     "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.3",
     "sequelize-typescript": "^2.1.6",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.8.3"
   },
   "jest": {
     "moduleFileExtensions": [
