--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "express-rate-limit": "^8.0.1",
     "http-proxy-middleware": "^3.0.5",
+    "ioredis": "^5.7.0",
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.2",
     "prettier": "^3.0.0",
