--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -51,6 +51,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "install": "^0.13.0",
+    "ioredis": "^5.7.0",
     "jest": "^29.5.0",
     "npm": "^10.9.3",
     "pg": "^8.16.3",
