--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,7 @@
 version: '3.3'
 
 services:
-  auth-service:
-      build: .
-      ports:
-        - '3001:3001'
-      environment:
-        - DB_HOST=postgres
-        - DB_PORT=5432
-        - DB_USERNAME=user
-        - DB_PASSWORD=strongpassword
-        - DB_NAME=users
-        - JWT_SECRET=mysecret
-      depends_on:
-        - postgres
-      volumes:
-        - .:/app
+ 
   postgres:
     image: postgres:16-alpine
     restart: always
@@ -27,6 +13,15 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5435:5432" # Expose PostgreSQL port to the host
+      
+  redis:
+    image: redis:latest
+    container_name: redis
+    restart: always
+    ports:
+      - "6379:6379"
+    command: [ "redis-server", "--appendonly", "yes" ]
+       
 
   pgadmin:
     image: dpage/pgadmin4
