--- a/user-microservice/package.json
+++ b/user-microservice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-gateway",
+  "name": "user-microservice",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -23,11 +23,14 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/sequelize": "^11.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -37,15 +40,12 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "dotenv": "^17.2.1",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "express-rate-limit": "^8.0.1",
-    "http-proxy-middleware": "^3.0.5",
-    "ioredis": "^5.7.0",
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
