--- a/api-gateway/.env
+++ b/api-gateway/.env
@@ -5,3 +5,4 @@ USER_SERVICE=http://localhost:3002
 JWT_SECRET=KJHDHNSDJU8455845JSJU
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
+LOKI_URL=https://test.grafana.com
