--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -46,6 +46,7 @@
     "ioredis": "^5.7.0",
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.2",
+    "nest-winston": "^1.10.2",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
@@ -53,7 +54,9 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "winston": "^3.17.0",
+    "winston-loki": "^6.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
